--- a/src/styles/pages/addTripPage.module.scss
+++ b/src/styles/pages/addTripPage.module.scss
@@ -9,10 +9,10 @@
   display: flex;
   flex-direction: column;
   padding: 3em 0;
-  justify-self: center;
   width: 100%;
   height: auto;
   max-width: 768px;
+  margin: 0 auto;
 }
 
 .input_group {
