--- a/src/styles/pages/userHomePage.module.scss
+++ b/src/styles/pages/userHomePage.module.scss
@@ -6,9 +6,10 @@
   width: 100%;
   height: auto;
   max-width: 768px;
-  justify-self: center;
   color: white;
   min-height: 90vh;
+  margin: 0 auto;
+  
   .page__date {
     text-align: end;
     padding: 1em;
