--- a/src/styles/pages/userLoginPage.module.scss
+++ b/src/styles/pages/userLoginPage.module.scss
@@ -141,3 +141,7 @@
   color: green;
   margin-top: 0.5em;
 }
+
+.login_success_msg{
+  color: green;
+}
